fix: Update z-index values of content to prevent overlapping

--- a/laravel/resources/css/pages/auth/_form.css
+++ b/laravel/resources/css/pages/auth/_form.css
@@ -7,7 +7,7 @@
 .auth-form__column {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 2.5rem;
 }
 
 .auth-form__group {
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    z-index: 1;
 }
 
 .auth-form__label {
@@ -26,7 +27,8 @@
     font-size: var(--font-size-small);
     color: var(--color-text-unimportant);
     font-family: 'Inter-SemiBold';
-    z-index: 1000;
+    z-index: 10;
+    pointer-events: none;
 }
 
 .auth-form__label span{
@@ -211,6 +213,7 @@
     color: var(--color-primary);
     width: fit-content;
     transition: all 0.2s ease;
+    z-index: 20;
 }
 
 .auth-form__info.active {
@@ -236,6 +239,7 @@
     z-index: 100;
     box-shadow: 0 4px 15px rgba(0,0,0,0.2);
     pointer-events: none;
+    z-index: 100;
 }
 
 .info-tooltip::after {
@@ -261,6 +265,7 @@
 .input-wrapper {
     position: relative;
     width: 100%;
+    z-index: 5;
 }
 
 .password-toggle {
@@ -277,7 +282,7 @@
     align-items: center;
     justify-content: center;
     transition: color 0.2s;
-    z-index: 1000;
+    z-index: 11;
 }
 
 .password-toggle:hover {
