--- a/laravel/resources/css/pages/auth/_main.css
+++ b/laravel/resources/css/pages/auth/_main.css
@@ -23,7 +23,8 @@
 
 .auth-header__title {
     font-family: Inter-Bold, sans-serif;
-    font-size: var(--font-size-logo);
+    font-size: 2rem;
+    letter-spacing: .2rem;
     margin-bottom: .5rem;
 }
 
